[package]
name = "carbon-bucket"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.8"
tokio = { version = "1.47.1", features = ["full"] }
warp = { version = "0.4.2", features=["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
mime_guess = "2.0"
bytes = "1.0"
futures-util = "0.3"
